--- a/requirements.txt
+++ b/requirements.txt
@@ -1,25 +1,25 @@
 # Core AI/ML frameworks
-langchain==0.1.0
-langchain-anthropic==0.1.0
-langgraph==0.0.20
+langchain>=0.1.0
+langchain-anthropic>=0.1.0
+langgraph>=0.2.0
 
 # MCP (Model Context Protocol)
-mcp==0.9.0
+mcp>=1.26.0
 
 # Data validation and processing
-pydantic==2.5.0
+pydantic>=2.11.0
 pandas==2.1.4
 
 # Environment and configuration
 python-dotenv==1.0.0
 
 # HTTP client
-httpx==0.26.0
+httpx>=0.27.1
 
 # Web framework
 fastapi==0.109.0
-uvicorn[standard]==0.27.0
-python-multipart==0.0.6
+uvicorn[standard]>=0.31.1
+python-multipart>=0.0.9
 jinja2==3.1.3
 
 # Document processing
